scrollbar fix

--- a/zehrakaratas.art/src/App.css
+++ b/zehrakaratas.art/src/App.css
@@ -20,7 +20,7 @@
 
 .page-enter {
   opacity: 0;
-  padding-top: 20px;
+  padding-top: 10px;
  
 }
 
@@ -39,7 +39,7 @@
 
 .page-exit-active {
   opacity: 0;
-  padding-top: 20px;
+  padding-top: 10px;
   
   transition: all 300ms;
 }
